# matrix

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  matrix.rs  tests.rs
