[package]
name = "matrix-basic"
version = "0.1.0"
edition = "2021"
authors = ["Sayantan Santra <sayantan[dot]santra689[at]gmail[dot]com"]
license = "GPL-3.0"
description = "A Rust crate for very basic matrix operations"
homepage = "https://crates.io/crates/matrix-basic"
documentation = "https://docs.rs/matrix-basic"
repository = "https://github.com/SinTan1729/matrix-basic"
readme = "README.md"
keywords = ["matrix", "math"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
